<resources>
    <string name="app_name">Bella Onojie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Your Cart</string>
    <string name="delicious_food_for_you">Delicious food for you</string>
    <string name="search">Search</string>
    <string name="foods">Foods</string>
    <string name="drinks">Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="sauce">Sauce</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="delivery_info">Delivery info</string>
    <string name="delivery_info_details">Delivered between monday aug and thursday 20 from 8pm to 91:32 pm</string>
    <string name="return_policy">Return Policy</string>
    <string name="return_policy_details">All our foods are double checked before leaving our stores so by any case you found a broken food please contact our hotline immediately.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="orders">Orders</string>
    <string name="offers_and_promo">Offers and Promo</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="security">Security</string>
    <string name="sign_out">Sign out</string>
    <string name="my_profile">My Profile</string>
    <string name="personal_details">Personal details</string>
    <string name="change">Change</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="pending_reviews">Pending reviews</string>
    <string name="help">Help</string>
    <string name="faq">Faq</string>
    <string name="update">Update</string>
    <string name="_1">1</string>
    <string name="go_to_checkout">Go to checkout</string>
    <string name="start_ordering">Start Ordering</string>
    <string name="no_history_yet">No history yet</string>
    <string name="create_an_order_desc">Hit the orange button down below to Create an order</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="empty_box">Empty Box</string>
    <string name="nothing_here">Nothing Here!!</string>
    <string name="aed">AED</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="food_for_everyone">Food for Everyone</string>
    <string name="app_logo">App Logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
</resources>