<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.HistoryFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/history_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/history" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/history_toolbar" />

        <LinearLayout
            android:id="@+id/empty_view"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_history"
                android:contentDescription="@string/no_history_yet" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rambla_bold"
                android:text="@string/no_history_yet"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rambla"
                android:text="@string/create_an_order_desc"
                android:textSize="17sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_ordering_btn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:layout_marginBottom="@dimen/dimen_16"
                android:text="@string/start_ordering"
                app:cornerRadius="@dimen/dimen_16" />
        </LinearLayout>

    </RelativeLayout>
</layout>