<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cartViewModel"
            type="com.example.bellaonojie.viewmodel.CartViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.CartFragment">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/cart_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/cart" />


        <LinearLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/empty_box"
                app:srcCompat="@drawable/ic_box" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rambla_bold"
                android:text="@string/nothing_here"
                android:textSize="24sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/checkout_btn"
            android:layout_below="@+id/cart_toolbar"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:orientation="vertical"
            app:cartList="@{cartViewModel.allCartItems}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/cart_item" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkout_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dimen_16"
            android:onClick="@{() -> cartViewModel.deleteAll()}"
            android:text="@string/go_to_checkout"
            app:cornerRadius="@dimen/dimen_16" />

    </RelativeLayout>
</layout>