<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userViewModel"
            type="com.example.bellaonojie.viewmodel.UserViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ProfileFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rambla_bold"
            android:text="@string/my_profile"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_toolbar" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rambla_bold"
            android:text="@string/personal_details"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/rambla_bold"
            android:text="@string/change"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="0dp"
            android:layout_height="197dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="@dimen/dimen_16"
            app:contentPadding="@dimen/dimen_16"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_img"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    app:loadImage="@{userViewModel.user.image}"
                    android:layout_weight="1"
                    android:contentDescription="@string/profile_picture"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profile_name"
                        android:text="@{userViewModel.user.username}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rambla_bold"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="@tools:sample/full_names" />

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{userViewModel.user.email}"
                        android:fontFamily="@font/rambla"
                        android:textSize="15sp"
                        tools:text="@tools:sample/cities" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/black" />

                    <TextView
                        android:id="@+id/profile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{userViewModel.user.phone}"
                        android:fontFamily="@font/rambla"
                        android:textSize="15sp"
                        tools:text="@tools:sample/us_phones" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/black" />

                    <TextView
                        android:id="@+id/profile_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rambla"
                        android:text="@{userViewModel.user.address}"
                        android:textSize="15sp"
                        tools:text="@tools:sample/lorem/random" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
            app:layout_constraintStart_toStartOf="@+id/materialCardView2"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/orders_btn"
                    style="@style/profile_items_style"
                    android:layout_width="match_parent"
                    android:text="@string/orders"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="@dimen/dimen_16" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pending_reviews_btn"
                    style="@style/profile_items_style"
                    android:layout_width="match_parent"
                    android:text="@string/pending_reviews"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="@dimen/dimen_16" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/faq_btn"
                    style="@style/profile_items_style"
                    android:layout_width="match_parent"
                    android:text="@string/faq"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="@dimen/dimen_16" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/help_btn"
                    style="@style/profile_items_style"
                    android:layout_width="match_parent"
                    android:text="@string/help"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="@dimen/dimen_16" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update_btn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/update"
                    app:cornerRadius="@dimen/dimen_16" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>