<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.bellaonojie.viewmodel.ItemDetailsViewModel" />

        <variable
            name="cartViewModel"
            type="com.example.bellaonojie.viewmodel.CartViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:toolbarId="@+id/toolbar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/details_menu"
                    app:navigationIcon="@drawable/ic_arrow_back" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView2"
                    android:layout_width="241dp"
                    android:layout_height="241dp"
                    android:layout_marginTop="@dimen/dimen_16"
                    app:loadImage="@{viewModel.item.image}"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/details_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_32"
                    android:fontFamily="@font/rambla_bold"
                    android:text="@{viewModel.item.name}"
                    android:textSize="28sp"
                    tools:text="@tools:sample/cities" />

                <TextView
                    android:id="@+id/details_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rambla_bold"
                    android:text="@{String.valueOf(viewModel.item.price)}"
                    android:textSize="22sp"
                    tools:text="@tools:sample/us_zipcodes" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:fontFamily="@font/rambla_bold"
                    android:text="@string/delivery_info"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:fontFamily="@font/rambla"
                    android:text="@string/delivery_info_details"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:fontFamily="@font/rambla_bold"
                    android:text="@string/return_policy"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:fontFamily="@font/rambla"
                    android:text="@string/return_policy_details"
                    android:textSize="15sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/details_add_to_cart"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:enabled="true"
                    android:fontFamily="@font/rambla_bold"
                    android:onClick="@{() -> cartViewModel.insert(viewModel.cartItem)}"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:cornerRadius="@dimen/dimen_16" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>